@@ -1,0 +1,3 @@
+[user]
+        email = <%= node[:jenkins][:build_user_email] %>
+        name = <%= node[:jenkins][:build_user_name] %>
